# RidicuLink

./: .dockerignore  .example-env  .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml
.github/workflows/: docker-publish.yml  pylint.yml
bot/: bot.py  example.local.settings.json  main.py  requirements.txt
bot/linfluenc_time_trigger/: __init__.py  blob.py  function.json
conf/: config.yml
crontab/: crontab  env.sh  task.sh  wrapper.sh
deployment/azure_function/: readme.md  requirements.txt
deployment/azure_function/linfluenc_time_trigger/: __init__.py  function.json
scraper/: main.py  scraper.py  scraper_mech.py  scraper_sel.py  test.py
src/: blob.py  bot_main.py  bot_nlp.py  main.py  main_bot.py  main_scraper.py  nlp_bot.py  scraper_main.py  scraper_sel.py
src/utils/: bot.py  database.py  scraper.py
