[tool.poetry]
name = "RidiculeLink"
version = "0.1.0"
description = "Create fictional, satirical LLM created content based on existing text post from LinkedIn."
authors = ["danczw <dev.dc@pm.me>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.7"
spacy = "^3.5.3"
selenium = "^4.9.1"
python-dotenv = "^1.0.0"
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz" }
langdetect = "^1.0.9"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
